# Discovery-PytestAutomation

./: .gitignore  CHANGELOG.md  Notes.txt  README.md  conftest.py  error_msg.py  pyproject.toml  requirements.txt  setup.py  test_MainManager.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: changelog.yml  codeql-analysis.yml  label-prod-pr.yml  pypi-publish.yml  stable-pr-merged.yml
automation/: __init__.py  auto.py  error_msg.py  helpers.py  main.py  plugin.py  yamlfile.py
pytestautomation/: auto.py  helpers.py  main.py  plugin.py  yamlfile.py
